--- a/templates/index.html
+++ b/templates/index.html
@@ -92,6 +92,7 @@
 
 {% load staticfiles %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="{% static 'jquery.waiting.js' %}"></script>
 <script src="{% static "index.js" %}"></script>
 
 </body>
