--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
                 <form class="form-group" onsubmit="return false;">
                     <h2>Will it go to your brain?</h2>
                     <div class="input-group">
-                    <input id="id_query" class="form-control" maxlength="100" name="query" type="text">
+                    <input id="id_query" class="form-control" maxlength="100" name="query" type="text" autocomplete="off">
                     <span class="input-group-addon btn btn-lg btn-primary" id="check">check</span>
 {#                    <input id='check' type="button" value="check" class="btn btn-primary btn-lg"/>#}
                     </div>
