--- a/templates/index.html
+++ b/templates/index.html
@@ -65,10 +65,10 @@
 <body>
 <div class="container">
     <div class="row vertical-center-row">
-        <div class="col-sm-3">
+        <div class="col-xs-2 col-sm-3">
 
         </div>
-        <div class="col-sm-6">
+        <div class="col-xs-8 col-sm-6">
             <div class="jumbotron">
                 <form class="form-group" onsubmit="return false;">
                     <h2>Will it go to your brain?</h2>
